--- a/Views/MainViewController/Base.lproj/MainViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/MainViewController.storyboard
@@ -156,7 +156,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeg-5G-SLO">
-                                <rect key="frame" x="94" y="43" width="187" height="27.5"/>
+                                <rect key="frame" x="94" y="43" width="187" height="26"/>
                                 <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="22"/>
                                 <color key="textColor" name="PrimaryColor"/>
                                 <nil key="highlightedColor"/>
@@ -219,12 +219,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSn-Li-dPV" customClass="FloatingActionButton" customModule="RealmTimers" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSn-Li-dPV" customClass="FloatingActionButton" customModule="RealmTimers" customModuleProvider="target">
                                 <rect key="frame" x="157" y="567" width="61" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" name="TintColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="A4L-ft-SSK"/>
-                                </constraints>
                                 <color key="tintColor" name="PrimaryColor"/>
                                 <state key="normal" image="fab"/>
                                 <userDefinedRuntimeAttributes>
@@ -237,62 +235,9 @@
                                     <action selector="menuTapped:" destination="abm-5L-Rju" eventType="touchUpInside" id="wgT-KM-3q9"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfR-YK-bca">
-                                <rect key="frame" x="72" y="184" width="87" height="113"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2Y-8u-FkJ">
-                                <rect key="frame" x="166.5" y="184" width="42" height="113"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="cOa-6b-u8V"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCi-zZ-Oin">
-                                <rect key="frame" x="217" y="184" width="94" height="113"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Answer" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kBE-YS-3NO">
-                                <rect key="frame" x="116" y="291" width="143" height="65"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="ukP-3u-Jhw"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
-                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqI-ZL-Lw5">
-                                <rect key="frame" x="122" y="393" width="130" height="75"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Submit"/>
-                                <connections>
-                                    <action selector="submitTapped:" destination="oCW-hT-13s" eventType="touchUpInside" id="GoA-eU-99t"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kby-1M-YPK">
-                                <rect key="frame" x="16" y="82" width="343" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="2TC-GJ-SP3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFu-EE-peH">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFu-EE-peH">
                                 <rect key="frame" x="154" y="487" width="83" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="5V6-JB-Uwg"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Reset Score"/>
                                 <connections>
                                     <action selector="resetScore:" destination="oCW-hT-13s" eventType="touchUpInside" id="9fg-E7-zLr"/>
@@ -300,43 +245,8 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Kby-1M-YPK" firstAttribute="top" secondItem="qwU-Y3-TUV" secondAttribute="top" constant="82" id="2es-H1-RGQ"/>
-                            <constraint firstItem="l2Y-8u-FkJ" firstAttribute="leading" secondItem="bfR-YK-bca" secondAttribute="trailing" constant="7.5" id="32u-df-K3S"/>
-                            <constraint firstItem="gFu-EE-peH" firstAttribute="top" secondItem="pqI-ZL-Lw5" secondAttribute="bottom" constant="19" id="3bO-b2-HTD"/>
-                            <constraint firstItem="Kby-1M-YPK" firstAttribute="centerX" secondItem="l2Y-8u-FkJ" secondAttribute="centerX" id="45U-AR-Svj"/>
-                            <constraint firstItem="qwU-Y3-TUV" firstAttribute="trailing" secondItem="PCi-zZ-Oin" secondAttribute="trailing" constant="64" id="4uu-yh-ZKR"/>
-                            <constraint firstItem="pqI-ZL-Lw5" firstAttribute="leading" secondItem="qwU-Y3-TUV" secondAttribute="leading" constant="122" id="6jC-hB-Z80"/>
-                            <constraint firstItem="Kby-1M-YPK" firstAttribute="trailing" secondItem="Ep5-wX-Wt3" secondAttribute="trailingMargin" id="Aa2-XI-9os"/>
-                            <constraint firstItem="bfR-YK-bca" firstAttribute="baseline" secondItem="l2Y-8u-FkJ" secondAttribute="baseline" id="BWl-bw-Tqi"/>
-                            <constraint firstItem="kBE-YS-3NO" firstAttribute="centerX" secondItem="pqI-ZL-Lw5" secondAttribute="centerX" id="CMN-66-mjm"/>
-                            <constraint firstItem="kBE-YS-3NO" firstAttribute="centerY" secondItem="Ep5-wX-Wt3" secondAttribute="centerY" id="EWe-o8-vV5"/>
-                            <constraint firstItem="bfR-YK-bca" firstAttribute="firstBaseline" secondItem="l2Y-8u-FkJ" secondAttribute="firstBaseline" id="Fi9-jg-vEM"/>
-                            <constraint firstItem="l2Y-8u-FkJ" firstAttribute="baseline" secondItem="PCi-zZ-Oin" secondAttribute="baseline" id="IY8-WX-k4X"/>
-                            <constraint firstItem="kBE-YS-3NO" firstAttribute="leading" secondItem="qwU-Y3-TUV" secondAttribute="leading" constant="116" id="IaJ-Ce-u9c"/>
-                            <constraint firstItem="l2Y-8u-FkJ" firstAttribute="centerX" secondItem="kBE-YS-3NO" secondAttribute="centerX" id="KVO-8M-KjC"/>
-                            <constraint firstItem="HSn-Li-dPV" firstAttribute="leading" secondItem="qwU-Y3-TUV" secondAttribute="leading" constant="157" id="Ruv-yT-Vt3"/>
-                            <constraint firstItem="gFu-EE-peH" firstAttribute="leading" secondItem="qwU-Y3-TUV" secondAttribute="leading" constant="154" id="TfE-8p-HPF"/>
-                            <constraint firstItem="PCi-zZ-Oin" firstAttribute="leading" secondItem="l2Y-8u-FkJ" secondAttribute="trailing" constant="8.5" id="Toj-LV-6JE"/>
-                            <constraint firstItem="pqI-ZL-Lw5" firstAttribute="centerX" secondItem="HSn-Li-dPV" secondAttribute="centerX" id="aOn-fv-E82"/>
-                            <constraint firstItem="pqI-ZL-Lw5" firstAttribute="top" secondItem="bfR-YK-bca" secondAttribute="bottom" constant="96" id="aYb-ly-5hC"/>
-                            <constraint firstItem="pqI-ZL-Lw5" firstAttribute="top" secondItem="kBE-YS-3NO" secondAttribute="bottom" constant="37" id="bzc-fh-OIz"/>
-                            <constraint firstItem="qwU-Y3-TUV" firstAttribute="bottom" secondItem="HSn-Li-dPV" secondAttribute="bottom" constant="20" id="dk8-6J-VWh"/>
-                            <constraint firstItem="bfR-YK-bca" firstAttribute="top" secondItem="Kby-1M-YPK" secondAttribute="bottom" constant="52" id="hpN-sN-FQL"/>
-                            <constraint firstItem="l2Y-8u-FkJ" firstAttribute="firstBaseline" secondItem="PCi-zZ-Oin" secondAttribute="firstBaseline" id="jR6-US-SP7"/>
-                            <constraint firstItem="HSn-Li-dPV" firstAttribute="top" secondItem="gFu-EE-peH" secondAttribute="bottom" constant="50" id="jhd-Ei-BTz"/>
-                            <constraint firstItem="bfR-YK-bca" firstAttribute="leading" secondItem="qwU-Y3-TUV" secondAttribute="leading" constant="72" id="uGa-Tg-Nbm"/>
-                            <constraint firstItem="Kby-1M-YPK" firstAttribute="leading" secondItem="Ep5-wX-Wt3" secondAttribute="leadingMargin" id="wsB-Xp-pTg"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qwU-Y3-TUV"/>
                     </view>
-                    <connections>
-                        <outlet property="answerTextField" destination="kBE-YS-3NO" id="OKB-8T-ABT"/>
-                        <outlet property="firstNumberLabel" destination="bfR-YK-bca" id="7cd-z1-4oo"/>
-                        <outlet property="operatorLabel" destination="l2Y-8u-FkJ" id="xDc-RE-HfE"/>
-                        <outlet property="scoreLabel" destination="Kby-1M-YPK" id="Bj7-Wh-f9Y"/>
-                        <outlet property="secondNumberLabel" destination="PCi-zZ-Oin" id="5vZ-Xj-3pF"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hED-x1-LFM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
