--- a/Views/MainViewController/Base.lproj/MainViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/MainViewController.storyboard
@@ -55,10 +55,10 @@
                                                                     <rect key="frame" x="154" y="40" width="169" height="106"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GQF-PU-Vg8">
-                                                                            <rect key="frame" x="16" y="23" width="51" height="60"/>
+                                                                            <rect key="frame" x="16" y="14" width="117" height="78"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHb-Ox-rMI">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="51" height="24"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="117" height="24"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" constant="24" id="HRQ-mq-oPT"/>
                                                                                     </constraints>
@@ -67,15 +67,21 @@
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8:54 PM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UDI-1e-Y3J">
-                                                                                    <rect key="frame" x="0.0" y="24" width="51" height="18"/>
+                                                                                    <rect key="frame" x="0.0" y="24" width="117" height="18"/>
                                                                                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="13"/>
                                                                                     <color key="textColor" red="0.49411764705882355" green="0.58039215686274503" blue="0.83137254901960778" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0V-qu-6qb">
-                                                                                    <rect key="frame" x="0.0" y="42" width="51" height="18"/>
+                                                                                    <rect key="frame" x="0.0" y="42" width="117" height="18"/>
                                                                                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="13"/>
                                                                                     <color key="textColor" red="0.49411764705882355" green="0.58039215686274503" blue="0.83137254901960778" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                    <nil key="highlightedColor"/>
+                                                                                </label>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PreFire Style: Math" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="de0-W9-V7E">
+                                                                                    <rect key="frame" x="0.0" y="60" width="117" height="18"/>
+                                                                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="13"/>
+                                                                                    <color key="textColor" red="0.4941176471" green="0.58039215690000001" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                             </subviews>
@@ -125,6 +131,7 @@
                                             <outlet property="cardView" destination="RkT-oD-0UV" id="eBP-Ec-4S9"/>
                                             <outlet property="nameLabel" destination="UDI-1e-Y3J" id="2WU-NO-H32"/>
                                             <outlet property="preFireLabel" destination="h0V-qu-6qb" id="qBY-SE-1Wa"/>
+                                            <outlet property="preFireStyle" destination="de0-W9-V7E" id="7Xe-ww-oZC"/>
                                             <outlet property="timerNameLabel" destination="QHb-Ox-rMI" id="9sX-qw-7QI"/>
                                         </connections>
                                     </tableViewCell>
